--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  system_proxy: ^0.1.0
+  dio: ^5.3.0
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
