--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^5.5.0+1
+  dio: ^5.6.0
   get_it: ^7.7.0
   flutter_bloc: ^8.1.6
   shared_preferences: ^2.3.2
+  flutter_inappwebview: ^6.0.0
 
 dev_dependencies:
   flutter_test:
