--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: flutter_foundations
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.6 <4.0.0'
+  sdk: ">=3.0.6 <4.0.0"
 
 dependencies:
   flutter:
@@ -15,13 +15,15 @@ dependencies:
   flutter_bloc: ^8.1.6
   shared_preferences: ^2.3.2
   flutter_inappwebview: ^6.0.0
+  injectable: ^2.4.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
   mockito: ^5.4.4
-  injectable_generator: ^2.6.1
+  injectable_generator: ^2.6.2
+  build_runner: ^2.4.12
 
 flutter:
   uses-material-design: true
