Update dependencies and improve project configuration
- Replace `system_proxy` with `native_flutter_proxy` in pubspec.yaml and related files
- Add new settings for local development in `.claude/settings.local.json`
- Update Android build configurations to support flavor-specific application IDs and names
- Upgrade Kotlin and Gradle versions in Android project
- Enhance testing documentation in CLAUDE.md to include running specific test files
- Add strings.xml for dynamic app name configuration in AndroidManifest.xml

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -75,12 +75,19 @@ android {
     productFlavors {
         dev {
             dimension "environment"
+            applicationIdSuffix ".dev"
+            versionNameSuffix "-dev"
+            resValue "string", "app_name", "Flutter Foundations Dev"
         }
         stg {
             dimension "environment"
+            applicationIdSuffix ".stg"
+            versionNameSuffix "-stg"
+            resValue "string", "app_name", "Flutter Foundations Stg"
         }
         prod {
             dimension "environment"
+            resValue "string", "app_name", "Flutter Foundations"
         }
     }
 }
