Add mock API setup and user data handling
- Introduce `http_mock_adapter` for mocking API responses in development
- Add `MockSetup` class to configure mock responses for user data
- Create `MockResponses` class to load and manage user data from JSON
- Include sample user data in `assets/mock/users.json`
- Update `DioClient` to utilize mock adapter based on configuration

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_inappwebview: ^6.1.5
   injectable: ^2.5.1
   native_flutter_proxy: ^0.2.3
+  http_mock_adapter: ^0.6.1
 
 
 
@@ -32,3 +33,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/mock/
