Enhance user feature implementation and update project structure
- Introduce feature-first organization by restructuring codebase to include a `features/` directory
- Implement `UserBloc` for state management and user data handling using BLoC pattern
- Create `UserPage` to display user information with loading and error states
- Add mock API setup for user data retrieval during development
- Update dependency injection configuration to include new user-related classes
- Add new user avatar images and update image resource management
- Revise `AppConfig` to support mock API responses and proxy settings
- Update documentation in CLAUDE.md to reflect architectural changes and new features

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   dio: ^5.9.0
   get_it: ^8.2.0
   flutter_bloc: ^9.1.1
+  equatable: ^2.0.5
   shared_preferences: ^2.5.3
   flutter_inappwebview: ^6.1.5
   injectable: ^2.5.1
@@ -36,3 +37,4 @@ flutter:
 
   assets:
     - assets/mock/
+    - assets/images/
