Update code generation setup and enhance project documentation
- Add generated file patterns to .gitignore to prevent committing build artifacts
- Update CLAUDE.md to clarify code generation process and dependencies
- Refactor user model to utilize Freezed for immutable data classes and JSON serialization
- Adjust user repository implementation to use the new model structure
- Introduce new tests for DioClient and error handling to improve coverage

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,12 @@ migrate_working_dir/
 .pub/
 /build/
 
+# Code generation (build_runner)
+*.g.dart
+*.freezed.dart
+*.mocks.dart
+*.config.dart
+
 # Symbolication related
 app.*.symbols
 
