--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   injectable: ^2.5.1
   native_flutter_proxy: ^0.2.3
   http_mock_adapter: ^0.6.1
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
 
 
 
@@ -29,8 +31,10 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^6.0.0
   mockito: ^5.4.4
-  injectable_generator: ^2.8.1
+  injectable_generator: ^2.6.2
   build_runner: ^2.4.13
+  freezed: ^2.5.7
+  json_serializable: ^6.8.0
 
 flutter:
   uses-material-design: true
