--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^6.0.0
   mockito: ^5.4.4
+  bloc_test: ^10.0.0
   injectable_generator: ^2.6.2
   build_runner: ^2.4.13
   freezed: ^2.5.7
