Refactor App Configuration and Update Dependency Injection
- Modify AppConfig to be a constant constructor for better performance
- Update configureDependencies to accept AppConfig as a parameter
- Refactor DioClient to utilize AppConfig for base URL and mock settings
- Remove obsolete constants file and adjust imports accordingly
- Add image code generation step in CI configuration

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ migrate_working_dir/
 *.mocks.dart
 *.config.dart
 
+# Auto-generated resources
+lib/core/resources/images.dart
+
 # Symbolication related
 app.*.symbols
 
